fixed thirdd alert not showing up

--- a/css/main.css
+++ b/css/main.css
@@ -572,5 +572,5 @@ ul .phone-number i {
 
 }
 #alert-row {
-    margin-top: 10px;
+    margin-top: 50px;
 }
